# parser-test

./: CMakeLists.txt  README.md
src/: hwparser.cpp  hwparser.h  macro.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.hpp  parseresult.h  spiritparser.hpp
